# gllsshadertool

./: .gitignore  LICENSE  README.md  convert_shaders_to_loop.py  fix_accumulation.py  fix_loop_multipliers.py  pyproject.toml
src/looplab/: __init__.py  main.py
src/looplab/app/: __init__.py  docks.py  main_window.py  models.py
src/looplab/encode/: __init__.py  ffmpeg.py
src/looplab/gl/: __init__.py  gl_resources.py  preview_widget.py  shader_manager.py  uniforms.py
src/looplab/project/: __init__.py  project_io.py  schema.py
src/looplab/render/: __init__.py  image_writer.py  offline_worker.py  timeline.py
src/looplab/shaders/examples/: FFT LED Falloff.audio.frag  FFT LED.audio.frag  FFT bars.audio.frag  FFT color.audio.frag  FFT glow.audio.frag  FFT polar.audio.frag  FFT rainbow.audio.frag  FFT slices.audio.frag  FFT split.audio.frag  FFT waves.audio.frag  Zippy zaps.frag  audio blob.audio.frag  audio eclipse rpm.audio.frag  audio waves.audio.frag  auroras.frag  ball of fire.frag  balls neon.frag  balls universe.frag  blob.frag  blocks.frag  bubbles soap.frag  circle scroll.frag  circles loading.frag  circuits reconfiguring.frag  circuits.frag  city.frag  clouds.frag  color dots.frag  colorful tris.frag  colorwheel.audio.frag  combustible.frag  cross scroll.frag  cypher.frag  dancing ball.audio.frag  debris.frag  discharge.frag  domainwarp_loop.glsl  explosion.frag  eyeball explosion.frag  fireworks.frag  (+68 more)
src/looplab/shaders/templates/: injected_header.glsl  loop_helpers.glsl
tests/: __init__.py  test_project_io.py  test_timeline.py  test_uniforms.py
