[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "looplab"
version = "0.1.0"
description = "AI-assisted GLSL loop shader tool with preview, offline render, and FFmpeg encode"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "LoopLab Authors" }
]
keywords = ["glsl", "shader", "opengl", "animation", "video", "loop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "PySide6>=6.5.0",
    "PyOpenGL>=3.1.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
looplab = "looplab.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/looplab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"
